# formula-foundry

./: .env.example  .gitignore  AGENT_MATRIX.md  Dockerfile  Dockerfile.worker  docker-compose.yml  pyproject.toml
data/: indicator-corpus-v1.0.jsonl
foundry/agents/: base.py  sympy_executor.py
foundry/agents/evolutionary/: agent_201.py  agent_202.py  agent_203.py  agent_204.py  agent_205.py
foundry/agents/orchestration/: agent_002.py  agent_003.py  librarian.py
foundry/agents/specialist/: agent_050.py  agent_051.py  agent_060.py  agent_089.py  agent_105.py  agent_151.py  agent_152.py
foundry/core/api/: main.py
foundry/core/db/: neo4j_client.py
foundry/core/schema/: formula.py  isomorphism.py
foundry/dag/: adverse_selection_flow.py  cross_asset_flow.py  entropy_flow.py  evolutionary_flow.py  evolutionary_flow_202.py  evolutionary_flow_203.py  evolutionary_flow_204.py  evolutionary_flow_205.py  flows.py  synthesis_flow.py  triggers.py  triggers_adverse_selection.py
foundry/ingest/: binance_ingest.py  databento_ingest.py  databento_ingest_adverse_selection_patch.py
lean/: Dockerfile  server.py
scripts/: generate_concat.py  run_crucible.py  seed_corpus.py  seed_indicators.py  seed_rejection.py  verify_environment.py
tests/: test_crucible.py
