[tool.poetry]
name = "formula-foundry"
version = "0.1.0"
description = "A Mathematical Think Tank: Formula Foundry for behavioral market modeling"
authors = ["Formula Foundry"]
readme = "README.md"
packages = [{include = "foundry"}]

[tool.poetry.dependencies]
python = "^3.12"

# API
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

# Data
pydantic = "^2.7.0"

# Graph DB (Blackboard)
neo4j = "^5.21.0"

# Relational DB (DAG state)
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}

# Agent compute
anthropic = "^0.29.0"
sympy = "^1.12"

# Numerical (required by foundry/dag/triggers.py — was missing from original)
numpy = "^1.26.0"

# HTTP client (seed script, agent-to-agent)
httpx = "^0.27.0"

# Env management
python-dotenv = "^1.0.0"

# Databento (market data — live feed integration, not required for testing)
databento = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"
black = "^24.4"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
